<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_view_list"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_nearby"
        android:icon="@drawable/ic_map"
        android:title="@string/nearby" />

</menu>